--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-scripts": "5.0.1",
+    "react-simple-star-rating": "^5.1.7",
+    "react-star-ratings": "^2.3.0",
     "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
