--- a/package.json
+++ b/package.json
@@ -3,13 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-tailwind/react": "^2.1.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "flowbite": "^2.2.0",
+    "flowbite-react": "^0.7.0",
     "formik": "^2.4.5",
+    "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-pay-icons": "^3.1.1",
     "react-scripts": "5.0.1",
     "react-simple-star-rating": "^5.1.7",
     "react-star-ratings": "^2.3.0",
